# eucalAI_backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  TODO.md  pyproject.toml
new-router/router-service/: .gitignore  pyproject.toml  runtime_config.json
new-router/router-service/src/router_service/: __init__.py  config.py  schemas.py
new-router/router-service/tests/: test_api.py  test_config.py  test_input_builder.py  test_logging.py  test_runtime_config.py  test_scoring.py  test_text.py  test_upstream.py
services/api-service/: .env.example  pyproject.toml
services/api-service/api_service/: __init__.py  db.py  main.py
services/api-service/api_service/common/: internal.py  internal_logs.py  schemas.py
services/api-service/api_service/controllers/: __init__.py  auth.py  billing.py  internal.py  keys.py  model_catalog.py
services/api-service/api_service/core/: arq_pool.py  config.py  db.py  jobs.py  lifespan.py  policies.py  router.py  worker.py
services/api-service/api_service/models/: __init__.py  admin_audit_log.py  admin_user.py  api_call_log.py  audit_action_definition.py  balance_transaction.py  email_verification_code.py  model_catalog.py  pool.py  routing_setting.py  topup_order.py  usage_stat.py  user.py  user_api_key.py  user_session.py  voucher_redemption_code.py
services/api-service/api_service/relay/: __init__.py  auth.py  billing.py  call_log_writer.py  channel_affinity.py  channel_selector.py  config_cache.py  dependencies.py  inference_client.py  rate_limiter.py  routing.py  runtime_config.py  sdk_clients.py  upstream.py  upstream_dispatch.py
services/api-service/api_service/repositories/: __init__.py  admin_user_repository.py  api_key_repository.py  audit_log_repository.py  billing_repository.py  call_log_repository.py  model_catalog_repository.py  pool_repository.py  routing_setting_repository.py  user_repository.py  voucher_repository.py
services/api-service/api_service/schemas/: __init__.py  auth.py  billing.py  common.py  keys.py  model_catalog.py
services/api-service/api_service/services/: __init__.py  api_key_service.py  auth_service.py  balance_service.py  email_service.py  model_catalog_service.py  topup_order_service.py  usage_stat_service.py  voucher_service.py
services/api-service/migrations/: alembic.ini  env.py
services/api-service/migrations/versions/: 20260519_baseline.py
services/api-service/tests/: conftest.py  test_admin_audit.py  test_admin_auth.py  test_admin_bootstrap.py  test_admin_dashboard.py  test_admin_management.py  test_admin_model_catalog.py  test_admin_pools.py  test_admin_route_monitor.py  test_admin_routing_settings.py  test_admin_service_logs.py  test_admin_users.py  test_admin_vouchers.py  test_api_key_service.py  test_audit_service.py  test_auth_change.py  test_auth_dependencies.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_refresh.py  test_auth_register.py  test_auth_reset.py  test_billing_balance.py  test_billing_tx.py  test_call_log_writer.py  test_channel_selector.py  test_config_cache.py  test_email_send.py  test_email_verify.py  test_health.py  test_inference_client.py  test_internal_endpoint.py  test_keys.py  test_model_catalog.py  test_model_catalog_service.py  test_models_import.py  test_pool_service.py  test_relay_auth.py  test_relay_billing.py  (+8 more)
services/api-service/tests/integration/: conftest.py  test_admin_relay_cache.py  test_relay_e2e.py  test_resource_concurrency.py
services/api-service/tests/relay/: conftest.py  test_anthropic_endpoint.py  test_chat_endpoint.py  test_models_endpoint.py  test_rate_limiter.py  test_responses_endpoint.py  test_sdk_clients.py  test_streaming.py
services/inference-service/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/inference-service/config/: runtime_config.json
services/inference-service/scripts/: check_env.py
services/inference-service/src/common/: internal.py
services/inference-service/src/inference_service/: config.py  error_handlers.py  main.py
services/router-service/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/router-service/docs/: anthropic-protocol-flow.md
services/router-service/scripts/: check_env.py  runtime_probe.py
services/router-service/src/: main.py
services/router-service/src/common/: config.py  internal.py
services/router-service/src/controllers/: chat.py  completions.py  messages.py  meta.py  responses.py
services/router-service/src/core/: config.py  dependencies.py  exceptions.py  router.py
services/router-service/src/gateways/: admin_config.py  calllog.py  calllog_batch.py  user_identity.py
services/router-service/src/router_service/: config.py  dependencies.py  main.py  settings.py
services/router-service/src/schemas/: anthropic.py  requests.py  responses.py
services/router-service/src/services/: anthropic_backend.py  anthropic_convert.py  call_lifecycle.py  calllog_buffer.py  channel_selector.py  config_manager.py  openai_backend.py  protocol_adapter.py  rate_limiter.py  responses_convert.py  routing.py  upstream_caller.py  upstream_dispatch.py
services/router-service/src/utils/: billing.py  logging_config.py  runtime_config.py  text.py
services/user-service/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  entrypoint.sh  init-db.sql  pyproject.toml
services/user-service/docs/: table_design_review.md
services/user-service/migrations/: alembic.ini  env.py
services/user-service/migrations/versions/: 20260427_01_operator_id_to_varchar.py  20260430_02_monetary_precision.py  20260504_01_add_route_monitor_columns.py  20260505_01_add_user_rpm_limit.py  20260505_02_drop_api_key_rpm_limit.py  20260514_01_table_design_fixes.py  20260515_01_status_to_http_codes.py  20260515_02_add_created_at_index.py
services/user-service/scripts/: backfill_zero_cost_logs.py  check_env.py
services/user-service/src/: main.py
services/user-service/src/common/: internal.py  internal_logs.py  (+1 more)
(+1341 files in other folders)
