[project]
name = "eucal-ai-backend"
version = "0.1.0"
description = "Eucal AI backend API built with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "httpx>=0.26.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "snowflake-id>=1.0.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2025.3",
    "litellm>=1.0.0",
    "cachetools>=5.0.0",
    "apscheduler>=3.10.0",
    "arq>=0.26.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
router = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.1",
    "transformers>=4.40",
]

[project.scripts]
start = "scripts.start_services:main"
bootstrap-super-admin = "admin_service.bootstrap_superadmin:main"
bootstrap-databases = "scripts.bootstrap_service_databases:main"
check-env = "scripts.check_service_environment:main"
migrate = "scripts.migrate:main"
phase2-cutover = "scripts.phase2_cutover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/admin_service",
    "src/user_service",
    "src/router_service",
    "src/testing_service",
    "src/content_service",
    "src/backend_app",
    "scripts",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
