[project]
name = "router-service"
version = "1.0.0"
description = "Smart router service - routes LLM requests to optimal upstream models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.40",
    "httpx>=0.27",
    "torch>=2.1",
    "transformers>=4.40",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "pydantic>=2.0",
]

[project.scripts]
router-service = "router_service.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/router_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[[tool.uv.index]]
name = "pytorch"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]