[project]
name = "eucal-router-service"
version = "0.1.0"
description = "Router service: DB-less API gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2025.3",
    "cachetools>=5.0.0",
    "redis>=5.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
]

[project.scripts]
check-env = "scripts.check_env:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/core",
    "src/controllers",
    "src/gateways",
    "src/services",
    "src/schemas",
    "src/utils",
]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
